Regression: Normal baking strange artifacts in texture bake #101669

Closed
opened 2022-10-07 11:33:20 +02:00 by Marcel Aulenbacher · 10 comments

System Information
Operating system: Windows 10
Graphics card: RTX 2060

Blender Version
Broken: 3.3.1 (b292cfe5a9)
Worked: 3.2.0 (e05e1e3691)

Change came in 38af5b0501

Short description of error
Normal texture baking appears to be completely broken. It looks like the shading type applied to the mesh is completely ignored and using always shade smooth on any surface right after automatically triangulating the mesh, which results in totally distorted normal bakes. Please see screenshots and attached blend file.

The broken bake in 3.3.1
Screenshot 2022-10-07 111806-3.3.1.jpg

The correct bake in 3.2.0
Screenshot 2022-10-07 112342-3.2.0.jpg

The corresponding blend file
broken-normals-3-3-1.blend

Exact steps for others to reproduce the error

  • Please take the attached file in 3.3.1 and hit the bake button, look at the result
  • Do the same in 3.2.0
**System Information** Operating system: Windows 10 Graphics card: RTX 2060 **Blender Version** Broken: 3.3.1 (b292cfe5a936) Worked: 3.2.0 (e05e1e369187) Change came in 38af5b0501 **Short description of error** Normal texture baking appears to be completely broken. It looks like the shading type applied to the mesh is completely ignored and using always shade smooth on any surface right after automatically triangulating the mesh, which results in totally distorted normal bakes. Please see screenshots and attached blend file. The broken bake in 3.3.1 ![Screenshot 2022-10-07 111806-3.3.1.jpg](https://archive.blender.org/developer/F13627106/Screenshot_2022-10-07_111806-3.3.1.jpg) The correct bake in 3.2.0 ![Screenshot 2022-10-07 112342-3.2.0.jpg](https://archive.blender.org/developer/F13627107/Screenshot_2022-10-07_112342-3.2.0.jpg) The corresponding blend file [broken-normals-3-3-1.blend](https://archive.blender.org/developer/F13627105/broken-normals-3-3-1.blend) **Exact steps for others to reproduce the error** - Please take the attached file in 3.3.1 and hit the bake button, look at the result - Do the same in 3.2.0

Added subscriber: @comvico

Added subscriber: @comvico
Member

Added subscribers: @lichtwerk, @PratikPB2123

Added subscribers: @lichtwerk, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm. Some change between 6db059e3d7 - 3c5620aabd has caused this.

@lichtwerk , can you bisect?

Thanks for the report. I can confirm. Some change between 6db059e3d7c3 - 3c5620aabd33 has caused this. @lichtwerk , can you bisect?
Member

On it

On it
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

Change came in 38af5b0501
Could be that this is somewhat expected, but will mark as regression for now (since it has worse behavior in the situation reported here)

CC @brecht

Change came in 38af5b0501 Could be that this is somewhat expected, but will mark as regression for now (since it has worse behavior in the situation reported here) CC @brecht
Philipp Oeser changed title from Normal baking broken, strange artifacts in texture bake to Regression: Normal baking strange artifacts in texture bake 2022-10-10 10:28:41 +02:00

This issue was referenced by ee8d32b1d9

This issue was referenced by ee8d32b1d9714159060d17aa3f6089b981b064ad

This issue was referenced by 8232cf5287

This issue was referenced by 8232cf5287445d21b7d6effb3f0e1ffb6df09adf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-11-09 19:38:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101669
No description provided.