Fix T101669: Cycles artifacts in bump map baking

After barycentric convention changes, the differentials used for bump mapping
were wrong leading to artifacts with long thin triangles.